--- a/about_us.css
+++ b/about_us.css
@@ -8,7 +8,7 @@ body {
   font-family: 'Times New Roman', Times, serif, sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url("/images/background2.jpg");
+  background-image: url("images/background2.jpg");
 }
 
 .container {
@@ -97,7 +97,7 @@ nav a:hover {
 }
 
 body[data-theme="light"] {
-  background-image: url("/images/background\ light.png");
+  background-image: url("images/background\ light.png");
   color: #000;
 }
 
