--- a/contactUs.css
+++ b/contactUs.css
@@ -7,7 +7,7 @@
 body {
     color: #333;
     line-height: 1.6;
- background-image:url("/images/background2.jpg") ;
+ background-image:url("images/background2.jpg") ;
 }
 .contact-us{
   justify-content: center;
@@ -89,7 +89,7 @@ input, textarea {
     height: 70px;
   }
   body[data-theme="light"]{
-    background-image:url("/images/background\ light.png") ;
+    background-image:url("images/background\ light.png") ;
      color: #000;
    }
    body[data-theme="light"] header {
