--- a/section3.css
+++ b/section3.css
@@ -7,7 +7,7 @@ body {
   font-family: 'Times New Roman', Times, serif, sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url("/images/background2.jpg");  
+  background-image: url("images/background2.jpg");  
 }
 .container {
   display: flex;
@@ -154,7 +154,7 @@ nav a:hover {
   color: #e4da2b;
 }
 body[data-theme="light"] {
-      background-image: url("/images/background\ light.png"); 
+      background-image: url("images/background\ light.png"); 
   color: #000;
 }
 body[data-theme="light"] header {
