--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  background-image: url("/images/pp.jpeg");
+  background-image: url("images/pp.jpeg");
   background-size: cover;
 }
 header {
@@ -153,7 +153,7 @@ body[data-theme="light"]  .search-results {
 }
 body[data-theme="light"] {
   background-color: #fff8f5;
-  background-image: url("/images/bhlight.jpeg");
+  background-image: url("images/bhlight.jpeg");
   color: #000;
 }
 body[data-theme="light"]  header {
